fixing flicker that was caused by scroll arrows gettting unmounted

--- a/apps/client/src/common/components/select/Select.module.scss
+++ b/apps/client/src/common/components/select/Select.module.scss
@@ -125,6 +125,11 @@
   font-size: 0.5rem;
   display: grid;
   place-content: center;
+  visibility: hidden;
+
+  &[data-visible] {
+    visibility: visible;
+  }
 
   &::before {
     content: '';
